CHANGES IN VERSION 1.1.6
------------------------
 o update add_colorbar & add_legend <2015-05-21, Thu>
 o add example of add_legend and gheatmap in vignette <2015-05-18, Mon> 
 o gheatmap implementation of gplot <2015-05-18, Mon>
 o add_legend for adding evolution distance legend <2015-05-18, Mon>
 
CHANGES IN VERSION 1.1.5
------------------------
 o implement scaleClade <2015-05-12, Tue>
 
CHANGES IN VERSION 1.1.4
------------------------
 o better performance of parsing beast tree  <2015-05-11, Mon>
   + support beast tree begin with 'tree tree_1 = ' and other forms.
   + support file that only contains one evidence for some of the nodes/tips
 o update add_colorbar to auto determine the position <2015-05-04, Mon>
 o add_colorbar function <2015-04-30, Thu>
 
CHANGES IN VERSION 1.1.3
------------------------
 o add space between residue substitution (e.g. K123R / E155D) <2015-04-30, Thu>
 o remove slash line in heatmap legend <2015-04-30, Thu>
 o update vignette to add example of merge_tree <2015-04-29, Wed>
 
CHANGES IN VERSION 1.1.2
------------------------
 o in addition to parsing beast time scale tree in XXX_year[\\.\\d]*, now supports XXX/year[\\.\\d]* <2015-04-29, Wed>
 o add examples folder in inst that contains sample data <2015-04-29, Wed>
 o update gplot, now rowname of heatmap will not be displayed <2015-04-28, Tue>
 o add line break if substitution longer than 50 character <2015-04-28, Tue>
 o upport calculating branch for time scale tree <2015-04-28, Tue>
 o remove parsing tip sequence from mlb and mlc file <2015-04-28, Tue>
 o remove tip.fasfile in read.paml_rst for rstfile already contains tip sequence <2015-04-28, Tue>
 o scale_color accepts user specific interval and output contains 'scale' attribute that can be used for adding legend <2015-04-28, Tue>
 o extend fortify methods to support additional fields <2015-04-28, Tue>
 o extend get.fields methods to support additional fields <2015-04-28, Tue>